<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Example</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="account_email_hint">Email address</string>
    <string name="account_password_hint">Password</string>
    <string name="login">Login to noMada</string>
    <string name="login_button">Login</string>
    <string name="sign_button">Sign in</string>
    <string name="sign_button_facebook">Sign in with Facebook</string>
    <string name="not_empty">Fields is empty</string>
    <string name="title_sign_in">Sign in</string>
    <string name="title_activity_create_account">Create account</string>
    <string name="create_account">Create account</string>
    <string name="create_account_wtih_facebook">Create account with Facebook</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="button_login">LOG IN</string>
    <string name="button_sign_up">SIGN UP</string>
    <string name="title_activity_welcome">muevete</string>

</resources>
